--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,4 +5,6 @@ server:
 scan:
   frequency: 10000
   scans:
-    - test nmap scanner
+    - nmap 192.168.11.3
+    - nmap 192.168.11.1
+    - nmap 192.168.11.2
