--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,6 @@ server:
 scan:
   frequency: 10000
   scans:
-    - nmap 192.168.11.3
-    - nmap 192.168.11.1
-    - nmap 192.168.11.2
+    - nmap -sn 192.168.11.0/24
+    - nmap -sn -n 192.168.11.0/24
+    - nmap -sL -n 192.168.11.0/24
